# marshrutka

./: Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/src/: main.rs
agent/src/commands/: download.rs  installed_applications.rs  kill_agent.rs  processlist.rs  sysinfo.rs
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
