[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6.2"
colored = "2.0.4"
serde_json = "1.0"
serde = { version = "1.0.100", features = ["derive"] }
orion = "0.17.6"
anyhow = "1.0"
dialoguer = "0.11.0"
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
newline-converter = "0.3.0"
ctrlc = "3.4"
