[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.100", features = ["derive"] }
fnv = "1.0.7"
orion = "0.17.6"
clap = "2"
colored = "2.0.4"
chrono = "0.4.31"